[package]
name = "hashgrid"
version = "0.1.2"
edition = "2021"
readme = "README.md"

[lib]
name = "hashgrid"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
double-precision = []
[dependencies]
serde = {version = "1.0", features = ["derive"]}
crossbeam = "0.8.2"
rand = "0.8.5"

[dev-dependencies]
serde_json = "1.0"
rand_distr = "*"
plotters = "0.3.1"
clap = {version = "4.2.5", features = ["derive"]}
